# openclaw-job-hunting-framework

./: .gitignore  CASE_STUDY.md  FRAMEWORK.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
cron-prompts/: daily-job-scouting.example.txt
docs/: architecture.md  feedback_loop.md  job_scout_tuning.yaml  openclaw_setup.md  report_contract.md
scripts/: job_scout_tuning.py  job_scouting_preflight.py  lead_decision.py  score_lead.py  search_keywords.py  search_plan.py  tracker_ops.py
skills/application-packet/: SKILL.md
skills/candidate-materials/: SKILL.md
skills/candidate-materials/references/: latest-cv-update.md
skills/cover-letter/: SKILL.md
skills/cover-letter/references/: jd-project-matching.md
skills/job-intake/: SKILL.md
skills/job-scout/: SKILL.md
skills/job-scout/references/: cron-heartbeat-troubleshooting.md  daily-heartbeat-source-patterns.md  scoring-rubric.md
skills/pipeline/: SKILL.md
tests/: test_job_scout_tuning.py  test_lead_decision.py  test_score_lead.py  test_search_plan.py
tests/fixtures/: agent_job_search_keywords.example.json
tests/fixtures/signals/: python_cv_secondary_cpp.json  source_limited_manual_review.json
